# rlib

./: CMakeLists.txt  README.md  common.hpp  logging.hpp  mr.hpp  msg_interface.hpp  pre_connector.hpp  qp.hpp  qp_impl.hpp  rdma_ctrl.hpp  rdma_ctrl_impl.hpp  rnic.hpp  ud_adapter.hpp
example/: client.cpp  server.cpp
